add some more content

--- a/index.html
+++ b/index.html
@@ -44,14 +44,29 @@
 				<h2 class="slidetitle"><a href="#activiteiten-kalender">Activiteiten-kalender</a></h2>
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
+
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht (op G+)</a></p>
+
 					<ul>
-						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 						<li><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
+						<li><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">11/11/2013 | Tuinhuizentocht - 6de editie</a></li>
+						<li><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
+						<li><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
+						<li><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
+						<li><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
+						<li><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">1/3/2014 | Zomeroffensief - 70jaar D-day</a></li>
+						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+					</ul>
+					
+					<h3>Eerstvolgende activiteit</h3>
+					<!-- Place this tag where you want the widget to render. -->
+					<div class="g-post" data-href="https://plus.google.com/103890813912672931897/posts/fC6FXdxXU19"></div>
+
+					<h3>Archief</h3>
+					<ul>
+						<li><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
 					</ul>
 
-<!-- Place this tag where you want the widget to render. -->
-<div class="g-post" data-href="https://plus.google.com/103890813912672931897/posts/fC6FXdxXU19"></div>
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht (op G+)</a></p>
 					<aside>
 						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
 					</aside>
@@ -206,7 +221,9 @@
 			<section id="over-oudscouts-parsival">
 				<h2 class="slidetitle"><a href="#over-oudscouts-parsival">Meer over Oudscouts Parsival</a></h2>
 				<div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat amet eos harum aut minus repellat similique at perferendis maxime ad minima quam rerum in voluptas. Vitae, nam non dolore.</p>
+					<p>Oudscouts Parsival is de oudscoutswerking van Scouts Parsival.  We proberen regelmatig te informeren over alles wat oud-Parsivalianen en hun aanverwanten aanbelangt.  Daarnaast organiseren we regelmatig eigen aktiviteiten,  gewoon... voor het contact, voor de fun, voor wie dat wil.   </p>
+					
+					<p>Om toch eea. te kanaliseren en bij elkaar te houden hebben we een bestuur, dat bestaat uit deze personen.</p>
 					<ul>
 						<li><strong>Hazewind</strong> alias Niko Geens <em>(voorzitter)</em></li>
 						<li><strong>Das</strong> alias Else Verschaeren <em>(secretaris)</em></li>
@@ -214,20 +231,24 @@
 						<li><strong>Vos</strong> alias Bart Van Asch <em>(logistiek & materiaal)</em></li>
 						<li><strong>Gibbon</strong> alias Koen Berings <em>(logistiek & materiaal)</em></li>
 					</ul>
-					<p>Daarnaast hebben we steevast het geluk en de eer te kunnen rekenen op een solide achterban, de harde kern zoals dat heet, zonder dewelke vele activiteiten nooit tot stand zouden komen.</p>
+					<p><strong>Echter niet vergeten:</strong> we kunnen steevast rekenen op een solide achterban, de harde kern zoals dat heet, zonder dewelke vele activiteiten nooit tot stand zouden komen.</p>
+					<aside>
+						<p>Heb je zelf een suggestie, opmerking, een drang om wel eens helpen hier of daar... <a href="#contact">geef gerust een seintje</a>.  We horen dat graag!</p>
+					</aside>
 				</div>
 			</section>
 			
 			<section id="contact">
 				<h2 class="slidetitle"><a href="#contact">Contacteer ons</a></h2>
 				<div>
-					<p>Contact opnemen kan heel eenvoudig:</p>
 					<ul>
 						<li>door ons eenvoudigweg aan te spreken, ergens te velde</li>
 						<li>via email: <a href="mailto:oudscouts@parsival.be">oudscouts@parsival.be</a></li>
-						<li>met een bericht aan onze G+ pagina (voor alle volgers)</li>
+						<li>met een bericht op onze G+ pagina (voor alle volgers)</li>
 					</ul>
-					<p>Sidder noch beef, we bijten heus niet ;-)</p>
+					<aside>
+						<p>Sidder noch beef, we bijten heus niet ;-)</p>
+					</aside>
 				</div>
 			</section>
 			
