integrate Google Webmaster Tools site verification code as metatag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Google Webmaster Tools Site Verification -->
+        <meta name="google-site-verification" content="BsYzDLIeQyISXr1yR1xSxBDKUGyCcCMP0Ajfh61r8CQ" />
+
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- Import Google Webfont 'Roboto' -->
