add Page Title & description

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Oudscouts Parsival</title>
+        <meta name="description" content="Oudscouts Parsival is de oudscoutswerking van Scouts Parsival.  We informeren op regelmatige basis over activiteiten en nieuws  voor en door (oud-)scouts...   aan al wie het weten wil.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Google Webmaster Tools Site Verification -->
