remove g+ embedded post widget (not working correctly)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
 
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht (op G+)</a></p>
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op G+</a></p>
 
 					<ul>
 						<li><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
@@ -61,10 +61,6 @@
 						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
 					
-					<h3>Eerstvolgende activiteit</h3>
-					<!-- Place this tag where you want the widget to render. -->
-					<div class="g-post" data-href="https://plus.google.com/103890813912672931897/posts/fC6FXdxXU19"></div>
-
 					<h3>Archief</h3>
 					<ul>
 						<li><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
