retry g+ embedded post widget

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
-	<!-- Place this tag in your head or just before your close body tag. -->
-	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-
-    </head>
+	</head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -61,6 +58,10 @@
 						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
 					
+					<!-- <h3>Eerstvolgende activiteit</h3>
+					<!-- Place this tag where you want the widget to render. -->
+					<div class="g-post" data-href="https://plus.google.com/103890813912672931897/posts/fC6FXdxXU19"></div> 
+
 					<h3>Archief</h3>
 					<ul>
 						<li><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
@@ -276,5 +277,7 @@
 		  ga('send', 'pageview');
 
 		</script>
+		<!-- Place this tag in your head or just before your close body tag. -->
+		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
     </body>
 </html>
