--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+		
+		<!-- G+ Post Embed: Place this tag in your head or just before your close body tag. -->
+		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 	</head>
     <body>
@@ -45,8 +48,6 @@
 				<div>
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
 
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op G+</a></p>
-
 					<ul>
 						<li><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
 						<li><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">11/11/2013 | Tuinhuizentocht - 6de editie</a></li>
@@ -57,16 +58,14 @@
 						<li><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">1/3/2014 | Zomeroffensief - 70jaar D-day</a></li>
 						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
-					
-					<!-- <h3>Eerstvolgende activiteit</h3>
-					<!-- Place this tag where you want the widget to render. -->
-					<div class="g-post" data-href="https://plus.google.com/103890813912672931897/posts/fC6FXdxXU19"></div> 
 
-					<h3>Archief</h3>
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
+	
+<!-- 					<h3>Archief</h3>
 					<ul>
 						<li><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
 					</ul>
-
+ -->
 					<aside>
 						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
 					</aside>
@@ -277,7 +276,6 @@
 		  ga('send', 'pageview');
 
 		</script>
-		<!-- Place this tag in your head or just before your close body tag. -->
-		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
     </body>
 </html>
