form css tweaks

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 							<label for="mce-BIRTHDATE-month" class="birthdate">Geboortedatum </label>
 							<span class="datefield">
 								<span class="subfield dayfield">
-									<input type="text" pattern="[0-9]*" placeholder="dag" value="" size="2" maxlength="2" name="BIRTHDATE[day]" id="mce-BIRTHDATE-day">
+									<input type="text" pattern="[0-9]*" placeholder="01" value="" size="2" maxlength="2" name="BIRTHDATE[day]" id="mce-BIRTHDATE-day">
 								</span> /
 								<span class="subfield monthfield">
-									<input type="text" pattern="[0-9]*" placeholder="maand" value="" size="2" maxlength="2" name="BIRTHDATE[month]" id="mce-BIRTHDATE-month">
+									<input type="text" pattern="[0-9]*" placeholder="01" value="" size="2" maxlength="2" name="BIRTHDATE[month]" id="mce-BIRTHDATE-month">
 								</span> / 
 								<span class="subfield yearfield">
-									<input type="text" pattern="[0-9]*" placeholder="jaar" value="" size="4" maxlength="4" name="BIRTHDATE[year]" id="mce-BIRTHDATE-year">
+									<input type="text" pattern="[0-9]*" placeholder="1970" value="" size="4" maxlength="4" name="BIRTHDATE[year]" id="mce-BIRTHDATE-year">
 								</span>
 						        <div class="fake-date"><input type="hidden" class=" date" id="BIRTHDATE-fake-date" value=""></div>
 							</span>
