--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
 						<li><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
 						<li><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
-						<li><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">1/3/2014 | Zomeroffensief - 70jaar D-day</a></li>
+						<li><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
 						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
 
