set IBAN account

--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
 						<p>Het lidmaatschap dient bij aanvang van elk werkjaar hernieuwd te worden.</p>
 					</aside>
 					<h3>Hoe?</h3>
-					<p>Stort het lidgeld op het rekeningnummer van de oudscouts: </p>
+					<p>Stort het lidgeld op het rekeningnummer van de oudscouts (met vermelding van je naam/totem en een geldig email-adres): </p>
 					<div class="infoblock">
-						<div class="accountnumber">979-9535082-84</div> 
-						<em>met vermelding van je naam/totem en een geldig email-adres.</em>
+						<div class="accountnumber">IBAN BE03 9799 5350 8284</div> 
+						<em>BIC: ARSP BE 22 | Argenta Spaarbank (ASPA)</em>
 					</div>
 					<aside>
 						<p>Evt. kan je ook cash betalen op één van onze activiteiten. De beste aanspreekpunten zijn dan Hop, Pony, of iemand anders van het bestuur (in die volgorde).</p>
