--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 						<p>Het lidmaatschap dient bij aanvang van elk werkjaar hernieuwd te worden.</p>
 					</aside>
 					<h3>Hoe?</h3>
-					<p>Stort het lidgeld op het rekeningnummer van de oudscouts (met vermelding van je naam/totem en een geldig email-adres): </p>
+					<p>Stort het lidgeld op het rekeningnummer van de oudscouts, met vermelding van je naam/totem en een geldig email-adres:</p>
 					<div class="infoblock">
 						<div class="accountnumber">IBAN BE03 9799 5350 8284</div> 
 						<em>BIC: ARSP BE 22 | Argenta Spaarbank (ASPA)</em>
