--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
 
 					<ul>
-						<li><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
-						<li><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">10/11/2013 | Tuinhuizentocht - 6de editie</a></li>
-						<li><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
-						<li><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
-						<li><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
-						<li><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
-						<li><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
-						<!-- <li><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+						<li class="past"><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
+						<li class="past"><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">10/11/2013 | Tuinhuizentocht - 6de editie</a></li>
+						<li class="present"><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cp2558mvu8a9hu3fneu5i93kt3g">13/12/2013 | Etentje Atlas (met Quinten & Bart?)</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
+						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
 
 					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
