--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					<p>Lid zijn van oudscouts Parsival kost €12,50 per individu, €20 euro voor een samenwonend koppel per jaar.</p>
 					<p>Het gros daarvan gaat naar de Vosog-verzekering. Wat overblijft zijn enkele euro's die we kunnen gebruiken voor onze eigen minimale werkingskosten, en af en toe een extraatje voor onze leden.</p>
 					<aside>
-						<p>Aan de mensen met (kleine) kinderen: voor een kleine extra bijdrage van 1 euro per kind (tot 12j) kunnen ze mee verzekerd worden. <strong>Te gek om niet te doen dus!</strong></p>
+						<p>Aan de mensen met (kleine) kinderen: voor een kleine extra bijdrage van 1 euro per kind (tot 18j!!) kunnen ze mee verzekerd worden. <strong>Te gek om niet te doen dus!</strong></p>
 					</aside>
 					<aside>
 						<p>Het lidmaatschap dient bij aanvang van elk werkjaar hernieuwd te worden.</p>
