--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
 						<li class="past"><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">10/11/2013 | Tuinhuizentocht - 6de editie</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
 						<li class="present"><a href="https://plus.google.com/events/cp2558mvu8a9hu3fneu5i93kt3g">13/12/2013 | Etentje Atlas (met Quinten & Bart?)</a></li>
+						<!-- <li class="future"><a href="https://plus.google.com/events/###">31/12/2013 | Oud op nieuw viering</a></li>
+						<li class="future"><a href="https://plus.google.com/events/###">02/01/2013 | Scoutsdropping Kerststal</a></li> -->
 						<li class="future"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
+						<!-- <li class="future"><a href="https://plus.google.com/events/###">23/01/2013 | Gekochte repititie Fanfare</a></li>
+						<li class="future"><a href="https://plus.google.com/events/###">30/01/2013 | Gekochte repititie Fanfare</a></li> -->
 						<li class="future"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
