--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 						<li class="past"><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">10/11/2013 | Tuinhuizentocht - 6de editie</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cp2558mvu8a9hu3fneu5i93kt3g">13/12/2013 | Etentje Atlas (met Quinten & Bart?)</a></li>
-						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
-						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs>02/01/2013 | Scoutsdropping Kerststal</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs>02/01/2013 | Scoutsdropping Kerststal</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
 						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2013 | Gekochte repititie Fanfare</a></li>
 						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2013 | 2de Gekochte repititie Fanfare</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
