--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs>02/01/2013 | Scoutsdropping Kerststal</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
-						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2013 | Gekochte repititie Fanfare</a></li>
-						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2013 | 2de Gekochte repititie Fanfare</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte 
+repititie Fanfare</a></li>
+						<li class="future"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de 
+Gekochte repititie Fanfare</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
