--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@ Gekochte repititie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
 						<li class="past"><a href="https://plus.google.com/events/clhikt2fvdpeprcnb1tnvordrg8">30/3/2014 | Target-game Mechelen</a></li>
-						<li class="future"><a href="https://plus.google.com/events/c6t9rqkb2kv1uq8a7ggvl76cjkk">12/4/2014 | Osse-Techniekenwandeling</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c6t9rqkb2kv1uq8a7ggvl76cjkk">12/4/2014 | Osse-Techniekenwandeling</a></li>
+						<li class="future"><a href="https://plus.google.com/events/chddi6uc4irgs2loivp8ablsa9o">27/4/2014 | Parsival - Ouderdag 2014</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
 						<li class="future"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">29-31/8/2014 | DOS Weekend - episode VI</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">?/?/2014 | DOS Weekend - episode VI</a></li>
 						<li class="future"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
 						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
