update datum DOS weekend

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Gekochte repititie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
 						<li class="future"><a href="https://plus.google.com/events/cueh0vcpsilljr54d7pm0u9s14c">19/6/2014 | Algemene ledenvergadering</a></li>
 						<li class="future"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">?/?/2014 | DOS Weekend - episode VI</a></li>
+						<li class="future"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
 						<li class="future"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
 						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
