calendar update + jaartal/themas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-		
+
 		<!-- G+ Post Embed: Place this tag in your head or just before your close body tag. -->
 		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
@@ -56,9 +56,9 @@
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs>02/01/2013 | Scoutsdropping Kerststal</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte 
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte
 repititie Fanfare</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de 
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de
 Gekochte repititie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
@@ -68,13 +68,20 @@ Gekochte repititie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cueh0vcpsilljr54d7pm0u9s14c">19/6/2014 | Algemene ledenvergadering</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
-						<li class="future"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
-						<li class="future"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
-						<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+						<li class="past"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
+						<li class="future"><a href="https://plus.google.com/events/craut0f4n8683bnnm5tio8ki8ok">10-12/10/2014 | Parsival Opendeurdagen</a></li>
+            <li class="future"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
+            <li class="future"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">29-30/11/2014 | Parsival Mosselfeest</a></li>
+            <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
+            <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
+            <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
+            <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
+            <!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
 
 					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
-	
+
 <!-- 					<h3>Archief</h3>
 					<ul>
 						<li><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
@@ -101,7 +108,7 @@ Gekochte repititie Fanfare</a></li>
 					<!-- Begin MailChimp Signup Form -->
 					<div id="optin">
 						<form action="http://parsival.us7.list-manage.com/subscribe/post?u=ecb739b64162b10e9ce286ee2&amp;id=1953d722c6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							
+
 							<input type="email" placeholder="Vul hier je e-mailadres in" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 
 							<input type="text" placeholder="Voornaam" value="" name="FIRSTNAME" class="firstname" id="mce-FIRSTNAME">
@@ -123,7 +130,7 @@ Gekochte repititie Fanfare</a></li>
 								</span> /
 								<span class="subfield monthfield">
 									<input type="text" pattern="[0-9]*" placeholder="01" value="" size="2" maxlength="2" name="BIRTHDATE[month]" id="mce-BIRTHDATE-month">
-								</span> / 
+								</span> /
 								<span class="subfield yearfield">
 									<input type="text" pattern="[0-9]*" placeholder="1970" value="" size="4" maxlength="4" name="BIRTHDATE[year]" id="mce-BIRTHDATE-year">
 								</span>
@@ -132,7 +139,9 @@ Gekochte repititie Fanfare</a></li>
 
 							<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 								<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
-								<option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
+								<option value="2014-2015">2014-2015 - Tent vol talent</option>
+                <option value="2013-2014">2013-2014 - Spelen bovenal overal - Ethe - Vikings</option>
+                <option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
 								<option value="2011-2012">2011-2012 - Armoede is een onrecht. Maak er spel van! - Moyen - Parsival Airlines</option>
 								<option value="2010-2011">2010-2011 - Gloeiend erbij - Villers-Le-Gambon - F.C. Parsival</option>
 								<option value="2009-2010">2009-2010 - Anders getikt - Gérouville - Op een onbewoond eiland</option>
@@ -177,7 +186,7 @@ Gekochte repititie Fanfare</a></li>
 							<div id="mce-responses" class="clear">
 								<div class="response" id="mce-error-response" style="display:none"></div>
 								<div class="response" id="mce-success-response" style="display:none"></div>
-							</div>	
+							</div>
 
 							<p><div class="clear">
 								<input type="submit" value="Hou mij op de hoogte!" name="subscribe" id="mc-embedded-subscribe" class="button"  onclick="_gaq.push(['_trackPageview' ,'newsletter-subscription']);">
@@ -202,7 +211,7 @@ Gekochte repititie Fanfare</a></li>
 						<li>Voor de verzekering. Het lidgeld omvat een <a href="http://www.vosog.eu/page?&orl=1&ssn=&lng=1&pge=49">oudscouts-verzekering via Vosog</a> (=Vlaamse Oud Scouts en Oud Gidsen). Op die manier ben je afdoende verzekerd voor de meeste activiteiten die we organiseren.</li>
 						<li>Wie lid is proberen we actief op de hoogte te houden van allerhande activiteiten die interessant kunnen zijn voor oud-scouts en aanverwanten.</li>
 						<li>Sommige van onze eigen activiteiten staan alleen open voor betalende  leden.  Voor deelname is lidmaatschap dan vereist.</li>
-						<li>Het geeft ons een beeld van 'de geïnteresseerde achterban', voor wie we deze moeite doen en dingen willen organiseren.</li> 
+						<li>Het geeft ons een beeld van 'de geïnteresseerde achterban', voor wie we deze moeite doen en dingen willen organiseren.</li>
 					</ul>
 					<h3>Wie?</h3>
 					<ul>
@@ -222,7 +231,7 @@ Gekochte repititie Fanfare</a></li>
 					<h3>Hoe?</h3>
 					<p>Stort het lidgeld op het rekeningnummer van de oudscouts, met vermelding van je naam/totem en een geldig email-adres:</p>
 					<div class="infoblock">
-						<div class="accountnumber">IBAN BE03 9799 5350 8284</div> 
+						<div class="accountnumber">IBAN BE03 9799 5350 8284</div>
 						<em>BIC: ARSP BE 22 | Argenta Spaarbank (ASPA)</em>
 					</div>
 					<aside>
@@ -235,7 +244,7 @@ Gekochte repititie Fanfare</a></li>
 				<h2 class="slidetitle"><a href="#over-oudscouts-parsival" onclick="_gaq.push(['_trackPageview' ,'#over-oudscouts-parsival']);">Meer over Oudscouts Parsival</a></h2>
 				<div>
 					<p>Oudscouts Parsival is de oudscoutswerking van Scouts Parsival.  We proberen regelmatig te informeren over alles wat oud-Parsivalianen en hun aanverwanten aanbelangt.  Daarnaast organiseren we regelmatig eigen aktiviteiten,  gewoon... voor het contact, voor de fun, voor wie dat wil.   </p>
-					
+
 					<p>Om toch eea. te kanaliseren en bij elkaar te houden hebben we een bestuur, dat bestaat uit deze personen.</p>
 					<ul>
 						<li><strong>Hazewind</strong> alias Niko Geens <em>(voorzitter)</em></li>
@@ -250,7 +259,7 @@ Gekochte repititie Fanfare</a></li>
 					</aside>
 				</div>
 			</section>
-			
+
 			<section id="contact">
 				<h2 class="slidetitle"><a href="#contact" onclick="_gaq.push(['_trackPageview' ,'#contact']);">Contacteer ons</a></h2>
 				<div>
@@ -264,7 +273,7 @@ Gekochte repititie Fanfare</a></li>
 					</aside>
 				</div>
 			</section>
-			
+
 			<footer>
 				<p>&copy 1999-2013 Oudscouts Parsival - Alle rechten voorbehouden - <a href="https://plus.google.com/103890813912672931897" rel="publisher">Google+</a><br />
 				Deze site valt onder een <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl">Creative Commons licentie</a>.</p>
