--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<li class="past"><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cp2558mvu8a9hu3fneu5i93kt3g">13/12/2013 | Etentje Atlas (met Quinten & Bart?)</a></li>
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
-						<li class="past"><a 
+						<li class="past"><a
 href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs">02/01/2013 | Scoutsdropping Kerststal</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte
@@ -71,9 +71,9 @@ Gekochte repititie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
-						<li class="future"><a href="https://plus.google.com/events/craut0f4n8683bnnm5tio8ki8ok">10-12/10/2014 | Parsival Opendeurdagen</a></li>
+						<li class="past"><a href="https://plus.google.com/events/craut0f4n8683bnnm5tio8ki8ok">10-12/10/2014 | Parsival Opendeurdagen</a></li>
             <li class="future"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
-            <li class="future"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">29-30/11/2014 | Parsival Mosselfeest</a></li>
+            <li class="future"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">22-23/11/2014 | Parsival Mosselfeest</a></li>
             <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
             <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
             <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
