--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ Gekochte repititie Fanfare</a></li>
             <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
             <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
             <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
+            <li class="future"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
             <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
             <!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
