verwijderen aanspreekpunt Pony voor betalingen

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Gekochte repititie Fanfare</a></li>
 						<em>BIC: ARSP BE 22 | Argenta Spaarbank (ASPA)</em>
 					</div>
 					<aside>
-						<p>Evt. kan je ook cash betalen op één van onze activiteiten. De beste aanspreekpunten zijn dan Hop, Pony, of iemand anders van het bestuur (in die volgorde).</p>
+						<p>Evt. kan je ook cash betalen op één van onze activiteiten. De beste aanspreekpunten zijn dan Hop of iemand anders van het organiserende team (in die volgorde).</p>
 					</aside>
 				</div>
 			</section>
