--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@ Gekochte repititie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
 						<li class="past"><a href="https://plus.google.com/events/craut0f4n8683bnnm5tio8ki8ok">10-12/10/2014 | Parsival Opendeurdagen</a></li>
-            <li class="future"><a href="https://plus.google.com/events/cae828u7o3qp6uljrfogi09v9t0">6/11/2014 | @ the movies: "Welp"</a></li>
-            <li class="future"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
-            <li class="future"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">22-23/11/2014 | Parsival Mosselfeest</a></li>
+            <li class="past"><a href="https://plus.google.com/events/cae828u7o3qp6uljrfogi09v9t0">6/11/2014 | @ the movies: "Welp"</a></li>
+            <li class="past"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
+            <li class="past"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">22-23/11/2014 | Parsival Mosselfeest</a></li>
+            <li class="future"><a href="https://plus.google.com/events/cueo3phmmn766u8fm97hboeqlv4">1/12/2014 | Info-vergadering Nieuwbouw Parsival</a></li>
+            <li class="future"><a href="https://plus.google.com/events/cnscifnodp11mua197edhetin40">21/12/2014 | VT-dropping + Giver Winter BBQ</a></li>
             <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
             <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
             <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
